# SCAL

./: Cargo.toml  Scal Overview.excalidraw  flake.nix
examples/simple/: Cargo.toml
examples/simple/src/: main.rs  test.mov
src/: anim_render.rs  animator.rs  encoder.rs  lib.rs  projection.rs  readback.rs  renderer.rs  types.rs
src/anim_object/: mod.rs  primitive_shapes.rs  render.rs  text.rs
src/anim_object/primitive_shapes/: mesh.rs  mod.rs  shape.wgsl
src/anim_object/text/: atlas.rs  mesh.rs  mod.rs  pipeline.rs  render.rs  text.wgsl
src/anim_object/text/code/: highlight_specs.rs  highliter.rs  mesh.rs  mod.rs  theme.rs
src/anim_op/: mod.rs  transform.rs
