[package]
name = "scal"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
uuid = {version = "1.23.4" ,features= ["v4"]}
log = "0.4.33"
wgpu = "29.0.3"
anyhow = "1.0.103"
ffmpeg-next = "8.1.0"
tokio = {version= "1.52.3",features =["full"]}
[workspace]
members = [
    "./examples/simple",
]
