[package]
name = "scal"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.33.2", features = ["bytemuck"] }
tree-sitter-highlight = "0.26.10"
tree-sitter = "0.26.10"
tree-sitter-nix = "0.3.0"
tree-sitter-rust = "0.24.2"
tree-sitter-zig = "1.1.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
cosmic-text = "0.19.0"
swash = "0.2.9"
bytemuck = "1.25.0"
uuid = {version = "1.23.4" ,features= ["v4"]}
log = "0.4.33"
wgpu = "29.0.3"
anyhow = "1.0.103"
ffmpeg-next = "8.1.0"
tokio = {version= "1.52.3",features =["full"]}
[workspace]
members = [
    "./examples/simple",
]
